--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.7.3",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
